# radio

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  state.rs
crates/app/src/net/: client.rs
crates/backend/: Cargo.toml
crates/backend/src/: args.rs  library.rs  main.rs  middleware.rs  net.rs
crates/backend/src/audio/: player.rs
crates/backend/src/data/: track.rs
crates/backend/src/net/: server.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  net.rs  playlist.rs
crates/core/src/data/: track.rs
crates/core/src/net/: dto.rs  protocol.rs
crates/ui-admin/: Cargo.toml  Dioxus.toml
crates/ui-stream/: Cargo.toml  Dioxus.toml
crates/ui-stream/assets/: footer.css  header.css  now-playing.css  progress_bar.css  style.css  track.css  up-next.css
crates/ui-stream/src/: components.rs  main.rs  state.rs
crates/ui-stream/src/components/: footer.rs  header.rs  now_playing.rs  progress_bar.rs  track.rs  up_next.rs
