[workspace]
resolver = "2"
members = ["crates/app","crates/backend","crates/core", "crates/ui-stream"]

[workspace.dependencies]
radio-app = { path = "crates/app" }
radio-core = { path = "crates/core" }
argh = "0.1.19"
chrono = { version = "0.4.44", features = ["serde"] }
dioxus = { version = "0.7.1" }
futures-util = "0.3.32"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = "0.5.5"
tokio = { version = "1.52.3", features = ["net", "sync"] }
tokio-tungstenite-wasm = "0.8.2"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["serde", "v4", "js"] }
wasm-bindgen-futures = "0.4.71"
