[package]
name = "ui-stream"
version = "0.1.0"
authors = ["Nabos <nabos@glargh.fr>"]
edition = "2021"

[dependencies]
dioxus.workspace = true
futures-channel = "0.3.32"
radio-core.workspace = true
radio-app.workspace = true
base64 = "0.22.1"
chrono.workspace = true
gloo-timers = { version = "0.4.0", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
